--- a/beet_files/pages.css
+++ b/beet_files/pages.css
@@ -51,7 +51,7 @@
 #latest_version a {
 	font-size: 44px;
 	text-decoration:none;
-	color: #906;
+	color: #A00;
 }
 #content h2 {
   border-top: 1px solid #CCC;
