updates to look and feel; new info for 0.1.3 (--save and --use)

--- a/beet_files/syntax.css
+++ b/beet_files/syntax.css
@@ -1,7 +1,7 @@
 .highlight {
 	line-height: 80%;
 	border-top: 1px solid #CCC;
-	border-bottom: 1px solid #CCC;
+/*	border-bottom: 1px solid #CCC; */
 }
 .highlight br {
   height: 0px;
